fixing chrome scrollbar css a bit

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -88,6 +88,7 @@ button {
   background: transparent;
   border-radius: 100vw;
   margin-block: 0.1em;
+  margin: 30px;
 }
 ::-webkit-scrollbar-thumb {
   background: var(--toastedalmond);
